objects/Account.object
<CustomObject>
    <fields>
        <fullName>Microsoft_Audit_Alert_Less90orGreater90__c</fullName>
        <formula>/* Process Root Certs with Status = Included or Change Requested */ 
IF(AND(Record_Type_Name__c = &apos;Root Certificate&apos;,OR(ISPICKVAL(Microsoft_Status__c, &apos;Included&apos;), 
ISPICKVAL(Microsoft_Status__c, &apos;Change Requested&apos;))), 

/* If Trust Bits contains Server Authentication (Root enabled for TLS) - check for Std, BR and EV dates */ 
IF(INCLUDES(Microsoft_Trust_Bits__c, &apos;Server Authentication&apos;), 

/* Check for NULL Standard Audit Date */
IF(ISBLANK(Standard_Audit_Statement_Date__c), &apos;1. Audit Alert : Standard Audit Date Null&apos;,  

/* Check for &lt; 90 days past due Standard Audit Date */ 
IF(AND ((Today() - (Standard_Audit_Statement_Date__c + 365) &gt;= 0),(Today() - (Standard_Audit_Statement_Date__c + 365) &lt;= 90)), &apos;2. Audit Alert : Standard Audit Date &lt; 90 days past due&apos;,

/* Check for &gt; 90 past due past due Standard Audit Date */ 
IF((TODAY() - (Standard_Audit_Statement_Date__c + 365) &gt; 90), &apos;3. Audit Alert : Standard Audit Date &gt; 90 days past due&apos;,

/* Std Audit Date ok; Check for NULL BR Audit Date */ 
IF(ISBLANK(BR_Audit_Statement_Date__c), &apos;4. Audit Alert : Standard Audit Date ok but BR Audit Date Null&apos;,

/* Std Audit Date ok; Check for &lt; 90 days past due BR Audit Date */ 
IF(AND ((Today() - (BR_Audit_Statement_Date__c + 365) &gt;= 0),(Today() - (BR_Audit_Statement_Date__c + 365) &lt;= 90)), &apos;5. Audit Alert : Standard Audit Date ok but BR Audit Date &lt; 90 days past due&apos;,

/* Std Audit Date ok; Check for &gt; 90 past due past due BR Audit Date */ 
IF((TODAY() - (BR_Audit_Statement_Date__c + 365) &gt; 90), &apos;6. Audit Alert : Standard Audit Date ok but BR Audit Date &gt; 90 days past due&apos;,

/* Std &amp; BR ok; Check for EV Audit Date only if EV Enabled */ 
IF(Microsoft_EV_Enabled__c = TRUE, 
IF(ISBLANK(EV_Audit_Statement_Date__c),&apos;7. Audit Alert : Standard Audit Date ok, BR Audit Date ok, root enabled for EV, but the EV audit Date Null&apos;, 

/* Std &amp; BR ok; EV Enabled; Check for &lt; 90 days past due EV Audit Date */ 
IF(AND ((Today() - (EV_Audit_Statement_Date__c + 365) &gt;= 0),(Today() - (EV_Audit_Statement_Date__c + 365) &lt;= 90)), &apos;8. Audit Alert : Standard Audit Date ok, BR Audit Date ok root enabled for EV, but EV Audit Date &lt; 90 days past due&apos;, 

/* Std &amp; BR ok; EV Enabled; Check for &gt; 90 past due past due EV Audit Date */ 
IF((TODAY() - (BR_Audit_Statement_Date__c + 365) &gt; 90), &apos;9. Audit Alert : Standard Audit Date ok, BR Audit Date ok root enabled for EV, but EV Audit Date &lt; 90 past due&apos;,

/* No Alerts */
&apos;No Audit Alert : Standard Audit Date ok, BR Audit Date ok, EV not enabled&apos;))), 
&apos;No Audit Alert : Standard Audit Date ok;BR Date ok; EV Date ok&apos;))))))), 
&apos;No Audit Alert : Microsoft Trust Bits Does Not Includes Server Authentication&apos;) , 
&apos;No Audit Alert : Type&lt;&gt;Root;Status&lt;&gt;Included;Status&lt;&gt;Change Requested&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Microsoft Audit Alert &lt;90 or &gt;90</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Audit_Alert_Over_446_Days__c</fullName>
        <formula>/* Process Root Certs with Status = Included or Change Requested */ 
IF(AND(Record_Type_Name__c = &apos;Root Certificate&apos;, 
    OR(ISPICKVAL(Microsoft_Status__c, &apos;Included&apos;), 
       ISPICKVAL(Microsoft_Status__c, &apos;Change Requested&apos;))),

/* If Standard Audit Period End Date null or old, set alert, else check for all other audits */
 IF(OR(ISBLANK(Standard_Audit_Period_End_Date__c), 
       Standard_Audit_Period_End_Date__c + 365 + 90 &lt; TODAY()),
        &apos;Audit Alert : Standard Audit Period End Date is Null or Over 90 days past due&apos;&amp; BR(),

/* Check for Trust Bits &quot;Code Signing&quot; then check Code Signing Period End Date null or old */
IF (INCLUDES(Microsoft_Trust_Bits__c, &quot;Code Signing&quot;), 
 IF (OR (ISBLANK(Code_Signing_Audit_Period_End_Date__c), 
       Code_Signing_Audit_Period_End_Date__c + 365 + 90 &lt; TODAY()), &apos;Audit Alert : Microsoft Trust Bits has Code Signing but Code Signing Audit Period End Date is Null or Over 90 days past due&apos; &amp; BR(), &quot;&quot;), &quot;&quot;) 
&amp;
/* Check for Trust Bits &quot;Server Authentication&quot;, then check for BR Period End Date null or old */
IF (INCLUDES(Microsoft_Trust_Bits__c, &quot;Server Authentication&quot;), 
 IF (OR (ISBLANK(BR_Audit_Period_End_Date__c), 
       BR_Audit_Period_End_Date__c + 365 + 90 &lt; TODAY()), &apos;Audit Alert : Microsoft Trust Bits has Server Authentication but BR Audit Period End Date is Null or Over 90 days past due&apos; &amp; BR(), &quot;&quot;), &quot;&quot;) 
&amp;
/* Check for Trust Bits &quot;Server Authentication&quot; and EV Enabled, then check for EV SSL Period End Date null or old */
IF (AND(INCLUDES(Microsoft_Trust_Bits__c, &quot;Server Authentication&quot;), Microsoft_EV_Enabled__c = True), 
 IF (OR (ISBLANK(EV_Audit_Period_End_Date__c), 
       EV_Audit_Period_End_Date__c + 365 + 90 &lt; TODAY()), &apos;Audit Alert : Microsoft Trust Bits has Server Authentication and Microsoft EV Enabled is True but EV SSL Audit Period End Date is Null or Over 90 days past due&apos; &amp; BR(), &quot;&quot;), &quot;&quot;) 
&amp;
/* Check for Trust Bits &quot;Code Signing&quot; and EV Enabled, then check for EV Code Signing Period End Date null or old */
IF (AND(INCLUDES(Microsoft_Trust_Bits__c, &quot;Code Signing&quot;), Microsoft_EV_Enabled__c = True), 
 IF (OR (ISBLANK(EV_Code_Signing_Audit_Period_End_Date__c), 
       EV_Code_Signing_Audit_Period_End_Date__c + 365 + 90 &lt; TODAY()), &apos;Audit Alert : Microsoft Trust Bits has Code Signing and Microsoft EV Enabled is True but EV Code Signing Audit Period End Date is Null or Over 90 days past due&apos; &amp; BR(), &quot;&quot;), &quot;&quot;) 

),
/* Ignore when not a Root Cert or not Included/Change Requested */
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Microsoft Audit Alert Over 446 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Audit_Alert__c</fullName>
        <description>Any changes done to this field could impact email text for &apos;Microsoft&apos;s Audit Reminder&apos; process.</description>
        <formula>/* Process Root Certs with Status = Included or Change Requested */ 
IF(AND(Record_Type_Name__c = &apos;Root Certificate&apos;,OR(ISPICKVAL(Microsoft_Status__c, &apos;Included&apos;), 
ISPICKVAL(Microsoft_Status__c, &apos;Change Requested&apos;))), 

/* If Trust Bits contains Server Authentication (Root enabled for TLS) - check for Std, BR and EV dates */ 
IF(INCLUDES(Microsoft_Trust_Bits__c, &apos;Server Authentication&apos;), 

/* Check for Standard Audit Date */ 
IF(OR(ISBLANK(Standard_Audit_Statement_Date__c), Standard_Audit_Statement_Date__c + 365 &lt; TODAY()), &apos;Audit Alert : Standard Audit Date Null or Old&apos;, 

/* Std Audit Date ok; Check for BR Audit Date */ 
IF(OR(ISBLANK(BR_Audit_Statement_Date__c), BR_Audit_Statement_Date__c + 365 &lt; TODAY()), &apos;Audit Alert : Standard Audit Date ok, Root enabled for TLS, but the BR Audit Date Null or Old&apos;, 

/* Std &amp; BR ok; Check for EV Audit Date only if EV Enabled */ 
IF(Microsoft_EV_Enabled__c = TRUE, 
IF(OR(ISBLANK(EV_Audit_Statement_Date__c), EV_Audit_Statement_Date__c + 365 &lt; TODAY()),&apos;Audit Alert : Standard Audit Date ok, BR Audit Date ok, root enabled for EV, but the EV audit Date Null or Old&apos;, 

/* No alerts */ 
&apos;No Audit Alert : Standard Audit Date ok, BR Audit Date ok, EV Audit Dates ok&apos;), 
&apos;No Audit Alert : Standard Audit Date ok, BR Audit Date ok, EV not enabled&apos;))), 
&apos;No Audit Alert : Microsoft Trust Bits Does Not Includes Server Authentication&apos;) , 
&apos;No Audit Alert : Type&lt;&gt;Root;Status&lt;&gt;Included;Status&lt;&gt;Change Requested&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field determines if the audits are due. It is used to generate Microsoft Audit Report.</inlineHelpText>
        <label>Microsoft Audit Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_CA_Owner_Status__c</fullName>
        <inlineHelpText>This is CA Owner Status on Intermediate Cert, updated via batch program</inlineHelpText>
        <label>Microsoft CA Owner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Contract_Type__c</fullName>
        <label>Microsoft Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Country_of_Origin__c</fullName>
        <label>Microsoft Country of Origin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Do_NOT_Send_Audit_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Audit Reminder for Microsoft process will ignore this Root Cert. Only to be used by CA Program Manager.</inlineHelpText>
        <label>Microsoft Do NOT Send Audit Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_EKU__c</fullName>
        <label>Microsoft EKU</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Code_Signing_Partners__c</fullName>
        <formula>IF (AND(
RecordType.Name = &quot;Root Certificate&quot;,
ISPICKVAL(Microsoft_Status__c, &quot;Included&quot;),
INCLUDES(Microsoft_Trust_Bits__c,&quot;Code Signing&quot;),
Microsoft_EV_Enabled__c = True)
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Microsoft EV Code Signing Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft EV Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Policy_OID_s__c</fullName>
        <label>Microsoft EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Root_Status__c</fullName>
        <inlineHelpText>This is Root Status on Intermediate Cert, updated via batch program</inlineHelpText>
        <label>Microsoft Root Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Status_In_Text__c</fullName>
        <description>Status picklist value is converted to text by workflow. Used by reports.</description>
        <label>Microsoft Status (In Text)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Status__c</fullName>
        <label>Microsoft Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                    <label>Not Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_TLD_Restriction__c</fullName>
        <inlineHelpText>Top level domain</inlineHelpText>
        <label>Microsoft TLD Restriction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Trust_Bits_EV_Code_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Trust Bits EV Code Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_Trust_Bits_EV_SSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Trust Bits EV SSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_Trust_Bits__c</fullName>
        <label>Microsoft Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archival</fullName>
                </value>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Verified_Audit_Date__c</fullName>
        <label>Microsoft Verified Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints__c</fullName>
        <label>Mozilla Applied Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Audit_Alert_Flag__c</fullName>
        <formula>Case (Mozilla_Audit_Alert__c, 
&quot;Mozilla: Audit Reminder&quot;, IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) &amp; &quot;Soon to expire Audit Statements&quot;, 
&quot;Mozilla: Overdue Audit Statements&quot;, IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) &amp; &quot;Overdue Audit Statements&quot;, 
&quot;Mozilla: Your root is in danger of being removed&quot;, IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;Root is in danger of being removed&quot;, 
&quot;Mozilla: Outdated Audit Statements for Intermediate Certificates&quot;, IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;Outdated Audit Statements&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Root &apos;Soon to expire &apos; - Over 31 to 93 days past due 
Root &apos;Overdue Audit Statements&apos; - Over 93 to 150 days past due 
Root &apos;Root is in danger of being removed&apos; - Over 150 days past due
Inter Cert &apos;Outdated Audit Statements for Intermediate&apos; - Overdue</inlineHelpText>
        <label>Mozilla Audit Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Audit_Alert__c</fullName>
        <inlineHelpText>Updated by audit reminder batch programs</inlineHelpText>
        <label>Mozilla Audit Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_CA_Owner_Status__c</fullName>
        <inlineHelpText>This is CA Owner Status on Intermediate Cert, updated via batch program</inlineHelpText>
        <label>Mozilla CA Owner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Provided by CA</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Root_Status__c</fullName>
        <inlineHelpText>This is Root Status on Intermediate Cert, updated via batch program</inlineHelpText>
        <label>Mozilla Root Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Provided by CA</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Status_for_Parent__c</fullName>
        <formula>TEXT(Parent.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mozilla Status for Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Verified_Audit_Date__c</fullName>
        <label>Mozilla Verified Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_Removed__c</fullName>
        <label>NSS Release When Removed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneCRL_Bug_Number__c</fullName>
        <label>OneCRL Bug Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OneCRL_Status__c</fullName>
        <label>OneCRL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Add</fullName>
                </value>
                <value>
                    <fullName>Added to OneCRL</fullName>
                </value>
                <value>
                    <fullName>Cert Expired</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <formula>&apos;PRODUCTION&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Type__c</fullName>
        <inlineHelpText>Indicate the type of organization operating this CA.</inlineHelpText>
        <label>Organizational Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Corporation</fullName>
                </value>
                <value>
                    <fullName>Public Corporation</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type__c</fullName>
        <formula>Parent.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <description>Further documentation or information relevant to this cert</description>
        <inlineHelpText>Further documentation or information relevant to this cert</inlineHelpText>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Identifiers__c</fullName>
        <label>Policy Identifiers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <inlineHelpText>Indicates what types of customers does the CA serve?
Are there particular vertical market segments in which it operates?
Does the CA focus its activities on a particular country or other geographic region?</inlineHelpText>
        <label>Primary Market / Customer Base</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Reporting_Mechanism__c</fullName>
        <inlineHelpText>Email address or URL for reporting suspected Private Key Compromise, Certificate misuse, or other types of fraud, compromise, misuse, inappropriate conduct, or any other matter related to Certificates.</inlineHelpText>
        <label>Problem Reporting Mechanism</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessPEMInfoBatch_Message__c</fullName>
        <label>ProcessPEMInfoBatch Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_Key_Algorithm__c</fullName>
        <label>Public Key Algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RSA 1024 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2045 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2046 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2047 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2048 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 3072 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 4096 bits</fullName>
                </value>
                <value>
                    <fullName>EC secp256r</fullName>
                </value>
                <value>
                    <fullName>EC secp256r1</fullName>
                </value>
                <value>
                    <fullName>EC secp384r1</fullName>
                </value>
                <value>
                    <fullName>EC secp512r1</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFC_5280_Revocation_Reason_Code__c</fullName>
        <inlineHelpText>Provide the reason for the certificate revocation. Value 7 is not being used.</inlineHelpText>
        <label>RFC 5280 Revocation Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(0) unspecified</fullName>
                </value>
                <value>
                    <fullName>(1) keyCompromise</fullName>
                </value>
                <value>
                    <fullName>(2) cACompromise</fullName>
                </value>
                <value>
                    <fullName>(3) affiliationChanged</fullName>
                </value>
                <value>
                    <fullName>(4) superseded</fullName>
                </value>
                <value>
                    <fullName>(5) cessationOfOperation</fullName>
                </value>
                <value>
                    <fullName>(6) certificateHold</fullName>
                </value>
                <value>
                    <fullName>(8) removeFromCRL</fullName>
                </value>
                <value>
                    <fullName>(9) privilegeWithdrawn</fullName>
                </value>
                <value>
                    <fullName>(10) aACompromise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recognized_CAA_Domains__c</fullName>
        <inlineHelpText>Certification Authority Authorization (CAA) domain names recognized in a CAA record&apos;s issue and issue wild property tags. Comma-separated list.</inlineHelpText>
        <label>Recognized CAA Domains</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Bug_No_or_Date__c</fullName>
        <label>Mozilla Removal Bug No. or Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revocation_Status__c</fullName>
        <label>Revocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Revoked</fullName>
                    <default>true</default>
                    <label>Not Revoked</label>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Parent Cert Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Verification__c</fullName>
        <inlineHelpText>Output from Verify Revocation check</inlineHelpText>
        <label>Revocation Verification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RootCertSafeID__c</fullName>
        <formula>CaseSafeID(Root_Cert_Id__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RootCertSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cert_Expiration_Alert__c</fullName>
        <description>Check &apos;Valid To&apos; date and set alert flags
- Red flag if it has already expired.
- Purple flag if it expires within one year.
- Yellow flag if it expires within two years.</description>
        <formula>IF (Valid_To_GMT__c - TODAY() &lt; 0, 
IMAGE(&quot;/resource/Flag_Red&quot;, &quot;Red flag&quot;),
   IF (Valid_To_GMT__c - TODAY() &lt; 365, IMAGE(&quot;/resource/Flag_Purple&quot;, &quot;Purple flag&quot;),
       IF (Valid_To_GMT__c - TODAY() &lt; 730, IMAGE(&quot;/resource/FLag_Yellow&quot;, &quot;Yellow flag&quot;),
       &quot;&quot;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check &apos;Valid To&apos; date and set alert flags
- Red flag if it has already expired.
- Purple flag if it expires within one year.
- Yellow flag if it expires within two years.</inlineHelpText>
        <label>Root Cert Expiration Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cert_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is populated by PublicAllIntermediateCerts batch program for all intermediate cert records.</inlineHelpText>
        <label>Root Cert Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <description>This field is hyperlink to Account Name. Mainly used in reports.</description>
        <formula>HYPERLINK(Id, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Status__c</fullName>
        <formula>TEXT( Root_Cert_Id__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field derives root status from &apos;Root Cert Id&apos; field. &apos;Root Cert Id&apos; is populated for all intermediate certs by PublicAllIntermediateCerts batch program.</inlineHelpText>
        <label>Root Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_1_Hash_String__c</fullName>
        <formula>SUBSTITUTE(SHA_1_Fingerprint__c, &quot;:&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1 (Hash String)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_1__c</fullName>
        <formula>LEFT(SHA_1_Fingerprint__c, 11) + &quot;...&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256_Hash_String__c</fullName>
        <formula>SUBSTITUTE(SHA_256_Fingerprint__c, &quot;:&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-256 (Hash String)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_256__c</fullName>
        <formula>LEFT(SHA_256_Fingerprint__c, 41) + &quot;...&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-256</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPKI_SHA256__c</fullName>
        <inlineHelpText>Identifies similar logical certificates in different CA Hierarchies. SHA256(der(spki))</inlineHelpText>
        <label>SPKI SHA256</label>
        <type>TextArea</type>
    </fields>
</CustomObject>